fixed overlap of forecast cards on globe & footer

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ input {
   border: 10px;
   width: 12%;
   margin-bottom: 0.83em;
+  color: black;
 }
 
 .search-input{
